# docudb

./: .gitignore  CMakeLists.txt  README.md
include/docudb/: test.h  trie.h
lib/: CMakeLists.txt  lib.cpp
src/: main.cpp
tst/: test.cpp
